--- a/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/primary.fxml
+++ b/client/src/main/resources/il/cshaifasweng/OCSFMediatorExample/client/primary.fxml
@@ -3,14 +3,30 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="il.cshaifasweng.OCSFMediatorExample.client.PrimaryController">
-   <children>
-      <Label text="Welcome" />
-      <Button mnemonicParsing="false" onAction="#sendWarning" text="Send me a warning!" />
-   </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
+<VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="il.cshaifasweng.OCSFMediatorExample.client.PrimaryController"
+      alignment="CENTER" spacing="20" prefWidth="400" prefHeight="500" style="-fx-background-color: #f5f5f5;">
+
+    <Text text="Amazing X/O GAME" style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-fill: #2a2a2a;" />
+
+    <GridPane fx:id="board" alignment="CENTER" hgap="10" vgap="10">
+        <Button fx:id="btn00" onAction="#handleButtonClick" GridPane.rowIndex="0" GridPane.columnIndex="0" prefWidth="80" prefHeight="80" />
+        <Button fx:id="btn01" onAction="#handleButtonClick" GridPane.rowIndex="0" GridPane.columnIndex="1" prefWidth="80" prefHeight="80" />
+        <Button fx:id="btn02" onAction="#handleButtonClick" GridPane.rowIndex="0" GridPane.columnIndex="2" prefWidth="80" prefHeight="80" />
+
+        <Button fx:id="btn10" onAction="#handleButtonClick" GridPane.rowIndex="1" GridPane.columnIndex="0" prefWidth="80" prefHeight="80" />
+        <Button fx:id="btn11" onAction="#handleButtonClick" GridPane.rowIndex="1" GridPane.columnIndex="1" prefWidth="80" prefHeight="80" />
+        <Button fx:id="btn12" onAction="#handleButtonClick" GridPane.rowIndex="1" GridPane.columnIndex="2" prefWidth="80" prefHeight="80" />
+
+        <Button fx:id="btn20" onAction="#handleButtonClick" GridPane.rowIndex="2" GridPane.columnIndex="0" prefWidth="80" prefHeight="80" />
+        <Button fx:id="btn21" onAction="#handleButtonClick" GridPane.rowIndex="2" GridPane.columnIndex="1" prefWidth="80" prefHeight="80" />
+        <Button fx:id="btn22" onAction="#handleButtonClick" GridPane.rowIndex="2" GridPane.columnIndex="2" prefWidth="80" prefHeight="80" />
+    </GridPane>
+
+    <Label fx:id="resultLabel" text="" style="-fx-font-size: 16px; -fx-text-fill: #444;" />
+
 </VBox>
